# Policani

./: .gitignore  LICENSE.md  README.md
business-case-system/: MANIFEST.md  README.md  pyproject.toml
business-case-system/chatgpt-project/: 00_START_HERE.md  01_INTAKE_AND_ROOT_CAUSE.md  02_BUSINESS_CASE_FRAMEWORK.md  03_ARTIFACT_REVIEW.md  04_AUDIENCE_FRAMING.md  05_QUALITY_RUBRIC.md  06_CRITICAL_REVIEW_COUNCIL.md  10_SAMPLE_PROMPT_PACK.md
business-case-system/examples/sample-data/: benefits_costs_draft.csv  operations_notes.md  project_plan_excerpt.csv  risk_log.csv  sample_business_case_input.json
business-case-system/examples/sample-outputs/: field_service_dispatch_and_parts_readiness_business_case.docx  field_service_dispatch_and_parts_readiness_quality_review.md
business-case-system/examples/sample-prompts/: business_case_system_prompt_pack.docx  business_case_system_prompt_pack.html  business_case_system_prompt_pack.md
business-case-system/quality-review/: package-review.md
business-case-system/templates/: benefits_costs_model.csv  decision_log.csv  risk_register.csv
business-case-system/tools/: smoke_test.py
business-case-system/workflow/: business-case-system-workflow.mmd
portfolio-projects/business-case-counselor/: AGENTS.md  CONTRIBUTING.md  MANIFEST.md  Makefile  README.md  pyproject.toml
portfolio-projects/business-case-counselor/docs/: artifact_intake_guide.md  audience_framing.md  business_case_framework.md  business_case_playbook.md  github_publish_checklist.md  intake_method.md  maturity_model.md  quality_rubric.md  review_council.md
(+396 files in other folders)
