[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "business-case-system"
version = "1.0.0"
description = "Structured AI-assisted business case development system with Markdown, HTML, and DOCX outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["python-docx>=1.1.0", "openpyxl>=3.1.0"]

[project.scripts]
business-case-system = "business_case_system.cli:main"

[tool.setuptools.packages.find]
where = ["tools/src"]
