[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "business-case-counselor"
version = "0.2.0"
description = "Interview, build, mature, and critically review business case documents with Markdown, DOCX, and HTML output."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Business Case Counselor Contributors"}]
dependencies = [
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0"
]

[project.scripts]
business-case-counselor = "business_case_counselor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
